--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,3 +9,7 @@ $dark:          #4a4a4a !default;
 
 $figtree-font-family: "figtree", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-base: $figtree-font-family !default;
+
+$border-radius:               .375em !default;
+$border-radius-lg:            6px !default;
+$border-radius-sm:            2px !default;
