Adding style in detail of product page

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
-$primary:       #2968c8 !default;
+$primary:       #3483fa !default;
 $secondary:     #fff159 !default;
-//$success:       $green !default;
+$success:       #00a650 !default;
 //$info:          $cyan !default;
 //$warning:       $yellow !default;
 //$danger:        $red !default;
